# chell

./: .gitignore  CMakeLists.txt  Makefile  exec.c  lineedit.h
include/: builtins.h  exec.h  globals.h  hashm.h  lineedit.h
src/: builtins.c  chell.c  exec.c  hashm.c  lineedit.c
